  * Build system switched to cmake from GNU autotools.
  * Size changed to MaxSize in OMA DS 1.2 DevInf
  * Fixes a couple of issues with SyncML, by Michael Bell
  * Fix segault in wbxml_encoder.c
      - Thanks Stijn van Drongelen
  * Add Sax like entity parsing
  * Miscallaneus build fixes and anonymous document support
  * Namespaces support
  * Some more cleanup and bug fixes

2008-11-21  Aymerick Jehanne <aymerick@jehanne.org>
  * New release: 0.9.3
  * Project cleanup.

2006-07-10  Aymerick Jehanne <aymerick@jehanne.org>
  * New release: 0.9.2
  * Finally applied fixes from OpenSync project and Debian libwbxml package
  * Added XCode project for MacOS X
  * Added Microsoft AirSync support
  * Some more cleanup and bug fixes
  * Windows and Symbian projects files are NOT up to date at all. Searching for mainteners.

2005-12-19  Aymerick Jehanne <aymerick@jehanne.org>
  * wbxml_tree.c: Fixed wbxml_tree_node_get_syncml_data_type().

2005-11-28  Aymerick Jehanne <aymerick@jehanne.org>
  * SyncML 1.2 support
  * Improved WBXMLTree API
  * New encoder 'flow mode'
  * Back to LGPL licence

2005-05-23  Aymerick Jehanne <aymerick@jehanne.org>
  * wbxml_tables.c: Added the 'WBXML_SUPPORT_PROV_11' flag to activate
    OMA PROV 1.1 tables. There is no new Public ID defined to OMA PROV 1.1.
    I don't know how to handle this, so for the moment I apply the OMA PROV 1.1
    tables modifications directly into OMA PROV 1.0 tables.

2005-04-01  Aymerick Jehanne <aymerick@jehanne.org>
  * wbxml_parser.c: Corrected a bug when Public ID is in string table.
    Handle phones that don't end string table with a terminating NULL char.
    Removed some potential memory leaks.

2005-03-29  Aymerick Jehanne <aymerick@jehanne.org>
  * wbxml_tree.[h|c]: Added wbxml_tree_node_have_child_elt()
  * wbxml_encoder.c: Added WBXML_ENCODER_XML_NO_EMPTY_ELT_INDENT
    to disable indent of elements that do not have child elements, for