@@ -3066,39 +3066,69 @@ static WBXMLError wbxml_encode_wv_integer(WBXMLEncoder *encoder, WB_UTINY *buffe
  */
 static WBXMLError wbxml_encode_wv_datetime(WBXMLEncoder *encoder, WB_UTINY *buffer)
 {
+#if 0
     /** @todo Finish wbxml_encode_wv_datetime() */
 
     return WBXML_ERROR_NOT_IMPLEMENTED;
-
-#if 0
+#endif
+    WBXMLError error;
     WBXMLBuffer *tmp = NULL;
     WB_ULONG i = 0, len = 0;
     WB_UTINY ch = 0;
     WBXMLError ret = WBXML_OK;
     WB_BOOL is_utc = FALSE;
+    WB_UTINY octets[6];
+    WBXMLBuffer *component = NULL;
 
     len = WBXML_STRLEN(buffer);
 
+    /* Create temp Buffer */
+    if ((tmp = wbxml_buffer_create_from_cstr(buffer)) == NULL) {
+        error = WBXML_ERROR_NOT_ENOUGH_MEMORY;
+        goto error;
+    }
+
     /* Check Length */
-    if ((len != 15) && (len != 16))
-        return WBXML_ERROR_WV_DATETIME_FORMAT;
+    if ((len == 13) || (len == 14)) {
+        /* This is illegal but we can tolerate datetimes
+         * which forget the seconds.
+         */
+        WBXML_WARNING((WBXML_CONV, "The WV datetime %s is missing the seconds.", buffer));
+        if (len == 13) {
+            wbxml_buffer_append_cstr(tmp, "00");
+        } else {
+            wbxml_buffer_insert_cstr(tmp, (WB_UTINY *) "00", 13);
+        }
+        len = wbxml_buffer_len(tmp);
+    }
+    if ((len != 15) && (len != 16)) {
+        WBXML_ERROR((WBXML_CONV, "The length of a WV datetime must be 15 or 16."));
+        error = WBXML_ERROR_WV_DATETIME_FORMAT;
+        goto error;
+    }
 
     /* Check position of 'T' */
-    if ((*buffer)[8] != 'T')
-        return WBXML_ERROR_WV_DATETIME_FORMAT;
+    if (*(buffer+8) != 'T') {
+        WBXML_ERROR((WBXML_CONV, "The 9th character of a WV datetime must be 'T'."));
+        error = WBXML_ERROR_WV_DATETIME_FORMAT;
+        goto error;
+    }
 
     /* Check position of 'Z' */
     if (len == 16) {
-        if ((*buffer)[15] != 'Z')
-            return WBXML_ERROR_WV_DATETIME_FORMAT;
+        if (!wbxml_buffer_get_char(tmp, 15, &ch)) {
+            error = WBXML_ERROR_INTERNAL;
+            goto error;
+        }
+        if (ch != 'Z') {
+            WBXML_ERROR((WBXML_CONV, "If the length of a WV datetime is 16 then the last character must be 'Z'."));
+            error = WBXML_ERROR_WV_DATETIME_FORMAT;
+            goto error;
+        }
 
         /* This is an UTC format */
         is_utc = TRUE;
     }
-
-    /* Create temp Buffer */
-    if ((tmp = wbxml_buffer_create_from_cstr(buffer)) == NULL)
-        return WBXML_ERROR_NOT_ENOUGH_MEMORY;
 
     /* Delete 'T' and 'Z' */
     if (is_utc)
@@ -3110,42 +3140,110 @@ static WBXMLError wbxml_encode_wv_datetime(WBXMLEncoder *encoder, WB_UTINY *buff
     while (i < wbxml_buffer_len(tmp)) {
         /* Get char */
         if (!wbxml_buffer_get_char(tmp, i, &ch)) {
-            wbxml_buffer_destroy(tmp);
-            return WBXML_ERROR_INTERNAL;
+            error = WBXML_ERROR_INTERNAL;
+            goto error;
         }
 
         if (!WBXML_ISDIGIT(ch)) {
-            wbxml_buffer_destroy(tmp);
-            return WBXML_ERROR_WV_DATETIME_FORMAT;
+            error = WBXML_ERROR_WV_DATETIME_FORMAT;
+            goto error;
         }
         else
             i++;
     }
 
-    /* Convert Ascii to Binary buffer */
-    wbxml_buffer_hex_to_binary(tmp);
+    WBXML_DEBUG((WBXML_CONV, "Starting WV datatime conversion ..."));
 
-    /* Set Year */
+    /* Set Year - 10000000000 too long */
+    component = wbxml_buffer_duplicate(tmp);
+    if (!component) {
+        error = WBXML_ERROR_NOT_ENOUGH_MEMORY;
+        goto error;
+    }
+    wbxml_buffer_delete(component, 4, 10);
+    unsigned int year = strtoull((const char *)wbxml_buffer_get_cstr(component), NULL, 10);
+    wbxml_buffer_destroy(component);
+    octets[5] = (WB_UTINY) (year & 0xfc0); /* 6 bits */
+    octets[4] = (WB_UTINY) (year & 0x3f);  /* 6 bits */
 
     /* Set Month */
+    component = wbxml_buffer_duplicate(tmp);
+    if (!component) {
+        error = WBXML_ERROR_NOT_ENOUGH_MEMORY;
+        goto error;
+    }
+    wbxml_buffer_delete(component, 0, 4);
+    wbxml_buffer_delete(component, 2, 8);
+    unsigned int month = strtoull((const char *)wbxml_buffer_get_cstr(component), NULL, 10);
+    wbxml_buffer_destroy(component);
+    octets[4] <<= 2;
+    octets[4] += (WB_UTINY) (month & 0xc); /* 2 bits */
+    octets[3] = (WB_UTINY) (month & 0x3); /* 2 bits */
 
     /* Set Day */
+    component = wbxml_buffer_duplicate(tmp);
+    if (!component) {
+        error = WBXML_ERROR_NOT_ENOUGH_MEMORY;
+        goto error;
+    }
+    wbxml_buffer_delete(component, 0, 6);
+    wbxml_buffer_delete(component, 2, 6);
+    unsigned int day = strtoull((const char *)wbxml_buffer_get_cstr(component), NULL, 10);
+    wbxml_buffer_destroy(component);
+    octets[3] <<= 5;
+    octets[3] += (WB_UTINY) (day & 0x1f); /* 5 bits */
 
     /* Set Hour */
+    component = wbxml_buffer_duplicate(tmp);
+    if (!component) {
+        error = WBXML_ERROR_NOT_ENOUGH_MEMORY;
+        goto error;
+    }
+    wbxml_buffer_delete(component, 0, 8);
+    wbxml_buffer_delete(component, 2, 4);
+    unsigned int hour = strtoull((const char *)wbxml_buffer_get_cstr(component), NULL, 10);
+    wbxml_buffer_destroy(component);
+    octets[3] <<=1;
+    octets[3] += (WB_UTINY) (hour & 0x1); /* 1 bit */
+    octets[2] = (WB_UTINY) (hour & 0x1e); /* 4 bits */
 
     /* Set Minute */
+    component = wbxml_buffer_duplicate(tmp);
+    if (!component) {
+        error = WBXML_ERROR_NOT_ENOUGH_MEMORY;
+        goto error;
+    }
+    wbxml_buffer_delete(component, 0, 10);
+    wbxml_buffer_delete(component, 2, 2);
+    unsigned int minute = strtoull((const char *)wbxml_buffer_get_cstr(component), NULL, 10);
+    wbxml_buffer_destroy(component);
+    octets[2] <<=4;
+    octets[2] += (WB_UTINY) (minute & 0x3c); /* 4 bits */
+    octets[1] = (WB_UTINY) (minute & 0x3); /* 2 bits */
 
     /* Set Second */
+    component = wbxml_buffer_duplicate(tmp);
+    if (!component) {
+        error = WBXML_ERROR_NOT_ENOUGH_MEMORY;
+        goto error;
+    }
+    wbxml_buffer_delete(component, 0, 12);
+    unsigned int second = strtoull((const char *)wbxml_buffer_get_cstr(component), NULL, 10);
+    wbxml_buffer_destroy(component);
+    octets[1] <<=4;
+    octets[1] += (WB_UTINY) (second & 0x3f); /* 6 bits */
 
     /* Set Time Zone */
+    octets[0] = 0;
 
     /* Encode it to Opaque */
-    ret = wbxml_encode_opaque(encoder, tmp);
-
-    wbxml_buffer_destroy(tmp);
+    ret = wbxml_encode_opaque_data(encoder, octets, 6);
 
     return ret;
-#endif /* 0 */
+error:
+    if (tmp)
+        wbxml_buffer_destroy(tmp);
+    return error;
 }
 
 #endif /* WBXML_SUPPORT_WV */
